--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-rnd": "^10.3.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.12",
     "redux": "^4.2.0",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
