--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
